# rlcard

./: README.md  pyproject.toml  setup.py
examples/: run_dmc.py  run_rl.py
examples/human/: run_dungeon_mayhem.py
rlcard/agents/: dqn_agent.py  dungeonmayhem_random_agent.py
rlcard/agents/dmc_agent/: trainer.py
rlcard/agents/human_agents/: dungeonmayhem_human_agent.py
rlcard/envs/: __init__.py  dungeonmayhem.py  dungeonmayhem2.py  env.py
rlcard/games/dungeonmayhem/: __init__.py  barbarian.py  card.py  char.py  game.py  paladin.py  rogue.py  wizard.py
